--- a/trunk/of/app/views/jobs/_form.rhtml
+++ b/trunk/of/app/views/jobs/_form.rhtml
@@ -2,19 +2,19 @@
 
 <table class='form-table'>
   <tr>
-    <th><label for="data_item_subject"><%=_('Subject')%></label><%=required_icon%></th>
+    <th><label for="data_item_subject"><%=_('Job|Subject')%></label><%=required_icon%></th>
     <td><%= text_field 'data_item', 'subject' %></td>
   </tr>
   <tr>
-    <th><label for="data_item_description"><%=_('Description')%></label><%=required_icon%></th>
+    <th><label for="data_item_description"><%=_('Job|Description')%></label><%=required_icon%></th>
     <td><%= text_area("data_item", "description") %></td>
   </tr>
   <tr>
-    <th><label for="data_item_requirement"><%=_('Requirement')%></label></th>
+    <th><label for="data_item_requirement"><%=_('Job|Requirement')%></label></th>
     <td><%= text_area("data_item", "requirement") %></td>
   </tr>
   <tr>
-    <th><label for="data_item_due"><%=_('Due Date')%></label><%=required_icon%></th>
+    <th><label for="data_item_due"><%=_('Job|Due')%></label><%=required_icon%></th>
     <td><%= text_field 'data_item', 'due' %></td>
   </tr>
   <tr>
