--- a/trunk/of/app/views/projects/_form.rhtml
+++ b/trunk/of/app/views/projects/_form.rhtml
@@ -78,7 +78,8 @@ AAA
     text_field('project', 'contactinfo', :maxlength => 255, :size => 50),
   foo("maturity", true, _("Project|Maturity|Help")),
     select('project', 'maturity', to_select(Project::MATURITY)),
-  foo("license", true, _("Project|License|Help")),
+  foo("license", true, _("Project|License|Help")) + "<br/><br/><br/>" +
+    "<a href=\"javascript:eval(wo('#{_('menu_LW_manual_link')}'))\">#{_('License Wizard')}</a>",
     err(@project, :license, tmp_licenses),
   foo("contentlicense", true, _("Project|Contentlicense|Help")),
     err(@project, :contentlicense, tmp_contentlicenses),
