--- a/trunk/of/app/views/partials/_help_menu.rhtml
+++ b/trunk/of/app/views/partials/_help_menu.rhtml
@@ -5,6 +5,12 @@
   <li><a href="/help">關於本手冊</a></li>
 </ol>
 
+<h3>國科會專案進駐說明</h3>
+<ol>
+  <li><a href="/help/nsc_project">註冊專案</a></li>
+  <li><a href="/help/nsc_project#ProjectReview">專案審查</a></li>
+</ol>
+
 <h3>版本控制系統</h3>
 <ol>
   <li><a class="option" href="/help/vcs#%E5%89%8D%E8%A8%80">前言</a></li>
