--- a/trunk/of/app/views/partials/_top_menu_data.rhtml
+++ b/trunk/of/app/views/partials/_top_menu_data.rhtml
@@ -65,6 +65,7 @@ var menudata=
     {id:'<%=_('Help')%>', url:'/help',
       submenu:[
         {id:'<%=_('OpenFoundry')%>', url:'/help'},
+        {id:'<%=_('NSC Project')%>', url:'/help/nsc_project'},
         {id:'<%=_('Version Control')%>', url:'/help/vcs'}
       ]
     }
