--- a/of/app/views/project_notify/rejected.rhtml
+++ b/of/app/views/project_notify/rejected.rhtml
@@ -1,4 +1,6 @@
-Your project creation request has been rejected!
-Please visit the following URL: <%= @project_url %>
+Your project creation request "<%= @project_name %>" has been rejected!
+If you have any question, please contact us at <%= OPENFOUNDRY_SITE_ADMIN_EMAIL %>.
+
+Thank you.
 
 OpenFoundry
