--- a/of/app/views/news/_search_hit.rhtml
+++ b/of/app/views/news/_search_hit.rhtml
@@ -7,8 +7,11 @@
   <% end %>
 </td>
 <td>
-  <% text =  record.highlight(@query, {:field => 'description_without_tag'}) %>
-  <% if text.empty? ;text = record.description_without_tag ;end %>
-    <%= content_tag 'label', text %> 
+  <%
+    text =  record.highlight(@query, {:field => 'description_without_tag'})
+    if text.empty?; text = record.description_without_tag.chars[0..150] + "..."; end 
+  %>
+
+  <%= content_tag 'label', text %> 
 </td>
 <!--search hit end-->
