--- a/of/app/views/fileentity/_search_hit.rhtml
+++ b/of/app/views/fileentity/_search_hit.rhtml
@@ -1,8 +1,19 @@
 <!--search hit-->
-<td colspan=2>
-  <%= link_to h(record.description), download1_path(:project_id => record.release.project_id) + "##{record.release.version}" %>
+<td>
+  <%unless record.release%>
+    <%= h(record.path)%>
+  <%else%>
+    <%= link_to h(record.path), download1_path(:project_id => record.release.project_id) + "##{record.release.version}" %>
+  <%end%>
 </td>
 <td>
-  <%= link_to h(record.release.project.summary), project_path(:id => record.release.project_id) %>
+  <%= h(record.description)%>
+</td>
+<td>
+  <%unless record.release%>
+    Release not found!
+  <%else%>
+    <%= link_to h(record.release.project.summary), project_path(:id => record.release.project_id) %>
+  <%end%>
 </td>
 <!--search hit end-->
