--- a/trunk/of/app/views/layouts/application.rhtml
+++ b/trunk/of/app/views/layouts/application.rhtml
@@ -13,6 +13,14 @@
   <%= javascript_include_tag 'calendar/calendar-setup' %>
   <%= stylesheet_link_tag 'calendar' %>
   <%= render :partial => 'partials/top_menu_data' %>
+  <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+    var pageTracker = _gat._getTracker("UA-5220412-1");
+    pageTracker._trackPageview();
+  </script>
 </head>
 
 <body >
