--- a/trunk/of/app/views/news/list.rhtml
+++ b/trunk/of/app/views/news/list.rhtml
@@ -13,7 +13,8 @@
       <%= link_to h(news.subject), news1_path(:id => news.id, :project_id => news.catid), :class => "news_subject" %>
     <%end%>
     <%=tz_date(news.updated_at)%>
-    <p><%=h(news.description.chars[0..270].gsub(/<[^>]*>/,' ')) %>...&nbsp;
+    <p>
+    <%= truncate(h(news.description.gsub(/<[^>]*>/,'')), 270, "...") %>
     (
     <%if news.catid == 0%>
       <%= link_to _('Read More'), site_news1_path(:id => news) %>
