--- a/of/app/views/news/show.rhtml
+++ b/of/app/views/news/show.rhtml
@@ -5,7 +5,7 @@
   <%if @news.catid == 0%>
   <%= @news.description%>
   <%else%>
-  <%= auto_link(h(@news.description).gsub("\n", '<br/>')) %>
+  <%= auto_link(simple_format(h(@news.description))) %>
   <%end%>
 </div>
 
