--- a/services/svn/openfoundry_svn.conf.tmpl
+++ b/services/svn/openfoundry_svn.conf.tmpl
@@ -13,6 +13,8 @@ VIEWVC_HOST_NAME = "of.openfoundry.org"
 VIEWVC_URL_PREFIX = "/viewvc-svn"
 
 DATA_IMPLEMENTATION = "openfoundry_json.rb"
+OPENFOUNDRY_JSON_URI = "a.json" # or an http://... URL
+
 
 #
 # implementation related configuration
