--- a/trunk/of/app/views/site_admin/site_admin/new_site_mail.rhtml
+++ b/trunk/of/app/views/site_admin/site_admin/new_site_mail.rhtml
@@ -1,7 +1,7 @@
 <% form_for(:mail, :url => {:action => "send_site_mail"}, :html => { :method => :put }) do |f| %>
 
 <p><label for="subject"><%=_('Subject')%></label><br/>
-<%= text_field 'mail', 'subject' %></p>
+<%= text_field 'mail', 'subject', :value => '[OpenFoundry]' %></p>
 
 <p><label for="message"><%=_('Message Content')%></label><br/>
 <%= text_area 'mail', 'message' %></p>
