--- a/of/app/views/projects/vcs_access.rhtml
+++ b/of/app/views/projects/vcs_access.rhtml
@@ -21,6 +21,15 @@ AD%98%E5%8F%96SVN%E6%AA%94%E6%A1%88%E5%BA%AB">See more instruction</a>.</p>
 <p><a href="http://of.openfoundry.org/help/vcs#%E9%80%8F%E9%81%8E%E5%91%BD%E4%BB%A4%E5%88%97%E5%
 AD%98%E5%8F%96CVS%E6%AA%94%E6%A1%88%E5%BA%AB">See more instruction</a>.</p>
 
+<% when Project::VCS[:SUBVERSION_CLOSE] -%>
+<h1><%= _('Subversion: Members Only') %></h1>
+<p>
+  <%= _('This project can only be accessed by members.') %>
+  <br/><b><%= @src %></b> 
+</p>
+<p><%= h(@vcs_desc) %></p>
+
+
 <% when Project::VCS[:REMOTE] -%>
 <h1><%= _('Remote Repository') %></h1>
 <p>
