--- a/of/app/views/openfoundry/index.rhtml
+++ b/of/app/views/openfoundry/index.rhtml
@@ -21,10 +21,11 @@
 </script>
   <h1>Welcome to OpenFoundry</h1>
   <div id="Module_Text">  
-    自由軟體鑄造場所開發的 <a href="/projects/1">OpenFoundry</a> 是一個讓自由軟體愛好者可以共同參與的網站，我們提供了包括待辦事項、版本控制、共同筆記、通信論壇、專案管理與網站代管等功能，讓開發者可利用此平台發展與分享自由軟體，使用者也可在此取得軟體並提供意見。
+    自由軟體鑄造場所開發的 <a href="/projects/1">OpenFoundry</a> 是一個讓自由軟體愛好者可以共同參與的網站，我們提供了包括待辦事項、版本控制、共同筆記、通信論壇、專案管理與網站代管等功能，讓開發者可利用此平台發展與分享自由軟體，使用者也可在此取得軟體並提供意見。現在就<a href="/projects/new"><em>建立</em></a>屬於你的專案吧！
   </div>
   <div id="Module_Text_OpenFoundry" style="display:none;">
- 自由軟體鑄造場專案開發平台（OpenFoundry）是一個讓軟體開發者與使用者 可以共同參與的網站，我們提供了包括待辦事項、版本控制、共同筆記、通 信論壇、專案管理與網站代管等功能，讓開發者可利用此平台發展與分享自 由軟體，一般使用者也可在此取得軟體並提供意見。  </div>
+    自由軟體鑄造場所開發的 <a href="/projects/1">OpenFoundry</a> 是一個讓自由軟體愛好者可以共同參與的網站，我們提供了包括待辦事項、版本控制、共同筆記、通信論壇、專案管理與網站代管等功能，讓開發者可利用此平台發展與分享自由軟體，使用者也可在此取得軟體並提供意見。現在就<a href="/projects/new"><em>建立</em></a>屬於你的專案吧！
+  </div>
   <div id="Module_Text_IssueTracker" style="display:none;">
 待辦事項(Issue Tracker)<br/><br/>
 待辦事項功能可用來追蹤專案內應處理的事項，包括事項的相關負責人，事項的處理狀態及事項的處理過程記錄等資訊；專案管理人員也可以使用這些功能來分派成員工作與追蹤軟體錯誤回報修復的情形。
