--- a/trunk/of/app/views/user/home.rhtml
+++ b/trunk/of/app/views/user/home.rhtml
@@ -15,6 +15,19 @@
   <% end %>
 </fieldset>
 <dl>
+  <% if (@my and @name =~ NSC_REVIEWERS_LOGIN_FILTER) %>
+  <dt>
+    <%= _('NSC Projects reviewed by me:') %>
+  </dt>
+  <dd>
+    <%# not efficient, but might be ok for just a few reviewers %>
+    <% Project.project_names_of_the_reviewer(@name).each do |n| %>
+      <%= project_logo_link(Project.find_by_name(n), {:with_name => true, :float => 'left'}) %>
+    <% end %>
+    <br clear="all"/>
+  </dd>
+  <% end %>
+
   <dt>
   <% if(@my)%>
     <%= _('My Partners')%>
