--- a/branches/LCamel/svn_dir/etc/openfoundry_svn.conf.tmpl
+++ b/branches/LCamel/svn_dir/etc/openfoundry_svn.conf.tmpl
@@ -1,18 +1,22 @@
 SVN_USER = "www" 
 SVN_GROUP = "www" 
-ROOT = "/home/svn/openfoundry_svn" 
-REPOS_PARENT_DIR = "/home/svn/repos" 
-BACKUP_PARENT_DIR = "/home/svn/backup"
-VIEWVC_PARENT_DIR = "/home/svn/viewvc" 
-SVN_AUTH_FILE = "#{ROOT}/svn-auth-file" 
-SVN_ACCESS_FILE = "#{ROOT}/svn-access-file" 
+ROOT = "/home/svn"
+BIN_DIR = "#{ROOT}/bin"
+LIB_DIR = "#{ROOT}/lib"
+ETC_DIR = "#{ROOT}/etc"
+LOG_DIR = "#{ROOT}/log"
+REPOS_PARENT_DIR = "#{ROOT}/repos" 
+BACKUP_PARENT_DIR = "#{ROOT}/backup"
+VIEWVC_PARENT_DIR = "#{ROOT}/viewvc" 
+SVN_AUTH_FILE = "#{ETC_DIR}/svn-auth-file" 
+SVN_ACCESS_FILE = "#{ETC_DIR}/svn-access-file" 
 SVNADMIN = "/usr/local/bin/svnadmin" # "/usr/bin/svnadmin" on ubuntu 
 SVN_HOST_NAME = "svn.openfoundry.org"
 SVN_URL_PREFIX = "/"
 VIEWVC_HOST_NAME = "of.openfoundry.org"
 VIEWVC_URL_PREFIX = "/viewvc-svn"
 
-DATA_IMPLEMENTATION = "openfoundry_json.rb"
+DATA_IMPLEMENTATION = "#{LIB_DIR}/openfoundry_json.rb"
 OPENFOUNDRY_JSON_URI = "a.json" # or an http://... URL
 
 
