--- a/trunk/of/app/views/kwiki/index.rhtml
+++ b/trunk/of/app/views/kwiki/index.rhtml
@@ -1,1 +1,1 @@
-<iframe src="<%=@module_url%>" id="of_module" name="of_module" frameborder="0"></iframe>
+<iframe src="<%=@module_url%>" id="of_module" name="of_module" frameborder="0" onload="iframe_auto_height(this);"></iframe>
