--- a/trunk/of/app/views/rt/index.rhtml
+++ b/trunk/of/app/views/rt/index.rhtml
@@ -94,4 +94,4 @@
 
 <input type="hidden" id="TicketSearchString" value="<%=@base_url%>" />
 
-<iframe src="<%=@show_url%>" id="of_module" name="of_module" frameborder="0"></iframe>
+<iframe src="<%=@show_url%>" id="of_module" name="of_module" frameborder="0" onload="iframe_auto_height(this);"></iframe>
