--- a/of/app/views/projects/permission_edit.rhtml
+++ b/of/app/views/projects/permission_edit.rhtml
@@ -32,7 +32,7 @@
                     <%=  check_box_tag "functions[#{function.id}]", function.id,
                       true, :disabled => true %>
                   <% end -%>
-                  <%= function.description%></li>
+                  <%= s_(function.description)%></li>
                 <% end %>
             </ul>
         
